# aikit

./: .gitignore  README.md  package-lock.json  package.json  需求文档.md
.github/workflows/: release.yml
frontend/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  git.rs  lib.rs  logger.rs  main.rs  paths.rs  skills.rs  store.rs
