[package]
name = "aikit"
version = "1.0.2"
description = "AI 工具技能管理器"
edition = "2021"

[lib]
name = "aikit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
